- Bugfix max width and visibility

--- a/darky-miky.css
+++ b/darky-miky.css
@@ -27,7 +27,20 @@
 	-webkit-overflow-scrolling: touch;
     box-sizing: border-box;
 }
+.eucookielaw-modal{
+	display: none;
+	max-width: 100vw;
+}
 
+body.modal-open .eucookielaw-modal{
+	display: block;
+	opacity: 0;
+	transition: opacity 0.5s ease-in;
+}
+
+body.modal-open .eucookielaw-modal.in{
+	opacity: 1;
+}
 @media only screen and (max-width : 480px) {
 		
 	.modal-open .eucookielaw-modal.modal {
